Fix code and port api auth-service